[tool.poetry]
name = "fake-vcons"
version = "0.1.0"
description = "A library of vCons for testing"
authors = ["Thomas Howe <ghostofbasho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
twine = "^5.1.1"
build = "^1.2.2.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
